# Athena

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Orb.tsx
apps/desktop/src/lib/: api.ts  store.ts
apps/desktop/src/views/: ChatView.tsx  HealthView.tsx  LogsView.tsx  MemoryView.tsx  PluginsView.tsx  SettingsView.tsx  WorkspacesView.tsx
docs/: ARCHITECTURE.md  CURSOR_HANDOFF.md  DEVELOPER_MODE.md  FABLE5_HANDOFF.md  FLOW_INTEGRATION.md  MEMORY.md  MODEL_ROUTER.md  PLUGINS.md  QA_AGENT_ROADMAP.md  ROADMAP.md  SECURITY.md  SERVER_ROADMAP.md  SETUP.md  TROUBLESHOOTING.md  VOICE.md
plugins/business/: manifest.json
plugins/calendar/: manifest.json
plugins/core/: handler.py  manifest.json
plugins/developer/: handler.py  manifest.json
plugins/files/: handler.py  manifest.json
plugins/flow/: manifest.json
plugins/gmail/: manifest.json
plugins/qa_agent/: manifest.json
plugins/server_connector/: manifest.json
plugins/smart_home/: manifest.json
plugins/voice/: manifest.json
plugins/web_search/: manifest.json
scripts/: autostart.ps1  dev-api.ps1  dev.ps1  setup.ps1
services/api/: Dockerfile  requirements.txt
services/api/athena_api/: __init__.py  config.py  db.py  logging_setup.py  main.py
tests/: test_api.py
(+34 files in other folders)
