# Tauri shell for the Athena desktop app.
# Requires the Rust toolchain (https://rustup.rs). Until Rust is installed,
# develop in the browser via `npm run dev` — the app is identical.
[package]
name = "athena-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
